--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
         <meta http-equiv="content-language" content="en" />
         <meta name="viewport" content="width=device-width, inital-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="../assets/css/styles.css">
-        <link rel="shortcut icon" type="image/png" href="{{ root_url }}/assets/images/favicon.ico">
+        <link rel="stylesheet" href="/assets/css/styles.css">
+        <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.ico">
         
     </head>
     <body>
