--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         <meta http-equiv="content-language" content="en" />
         <meta name="viewport" content="width=device-width, inital-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://makalatrezise.github.io/cools/assets/css/styles.scss">
+        <link rel="stylesheet" href="https://makalatrezise.github.io/cools/assets/css/styles.css">
         <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.ico">
         
     </head>
