--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -4,7 +4,7 @@
         <title> cools cache studio </title>
         <meta name="viewport" content="width=device-width, inital-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link href="../assets/css/styles.css" rel="stylesheet">
+        <link href=".https://makalatrezise.github.io/cools/assets/css/styles.css" rel="stylesheet">
         <link rel="shortcut icon" type="image/png" href="../assets/images/favicon.ico">
         
     </head>
