--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="row justify-content-between">
-    <a href="{{site.url}}/index.html"> <p class="nav-text"> cools cache | (studio) | dot com </p> </a>
+    <a href="/index.html"> <p class="nav-text"> cools cache | (studio) | dot com </p> </a>
     <a href="/about.html"> <span class="nav-text"> about </span> </a>
   </div>
 
