--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="row justify-content-between">
-    <a href="/index.html"> <p class="nav-text"> cools cache | (studio) | dot com </p> </a>
-    <a href="/about.html"> <span class="nav-text"> about </span> </a>
+    <a href="index.html"> <p class="nav-text"> cools cache | (studio) | dot com </p> </a>
+    <a href="about.html"> <span class="nav-text"> about </span> </a>
   </div>
 
 </div>
