--- a/_layouts/ecaptis.html
+++ b/_layouts/ecaptis.html
@@ -7,7 +7,7 @@ layout: ecaptis
     <head>
         <title> {{ page.title }} </title>
         <meta charset="UTF-8">
-        <meta name="description" content="anberra Sleep Clinic struggled to engage with exisiting patients and attract new ones. We developed a scalable digital 
+        <meta name="description" content="Canberra Sleep Clinic struggled to engage with exisiting patients and attract new ones. We developed a scalable digital 
         engagement tool that combined the management and retention of current patients, and the ability to interact with prospective ones.">
         <meta name="keywords" content="UX Design, UI Design, Front-end Coding, HTML, CSS, Melbourne, Studio">
         <meta name="author" content="Cools Cache">
