--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -1,6 +1,6 @@
 <div class="post-header">
     <div class="header-inner">
-        <a href="{{site.url}}/index.html"> <p class="nav-text logo"> cools cache | (studio) </p> </a>
+        <a href="{{site.url}}/portfolio.html"> <p class="nav-text logo"> cools cache | (studio) </p> </a>
         <!-- <span class="post-header-capsule"> {{ page.title }} </span> -->
         <p class="gallery-status"></p>
     </div>
