--- a/_layouts/bluewave.html
+++ b/_layouts/bluewave.html
@@ -40,7 +40,7 @@ layout: bluewave
 
                 <div class="gallery-cell">
                     <div class="cell-text">
-                        <img src="{{ page.image2 }}" alt="gif of bluewave home screen" class="img-fluid images2">
+                        <img src="{{ root_url }}/assets/images/bluewave-entire.mp4" alt="gif of bluewave home screen" class="img-fluid images2">
                         <p class="project-title"> {{ page.challenge-title}} </p> 
                         <p class="project-para-colon"> {{ page.the-challenge }} </p>
                         <p class="project-para-dot"> {{ page.c-point1 }} </p>
@@ -72,7 +72,7 @@ layout: bluewave
 
                 <div class="gallery-cell">
                     <div class="cell-text">
-                        <img src="{{ page.image5 }}" class="img-fluid images2">
+                        <img src="{{ root_url }}/assets/images/bluewave-warning.mp4" class="img-fluid images2">
                         <p class="project-title"> {{ page.ideation-prototype-title }} </p> 
                         <p class="project-para"> {{ page.prototyping }} </p>
                     </div>
@@ -80,7 +80,7 @@ layout: bluewave
 
                 <div class="gallery-cell">
                     <div class="cell-text">
-                        <img src="{{ page.image6 }}" class="img-fluid images2">
+                        <img src="{{ root_url }}/assets/images/bluewave-portal.mp4" class="img-fluid images2">
                         <p class="project-title"> {{ page.interface-title }} </p> 
                         <p class="project-para-colon"> {{ page.interface }} </p>
                         <p class="project-para-dot"> {{ page.interface-point1 }} </p>
