--- a/_layouts/bluewave.html
+++ b/_layouts/bluewave.html
@@ -40,6 +40,9 @@ layout: bluewave
 
                 <div class="gallery-cell">
                     <div class="cell-text">
+                        <video controls>
+  <source src="{{ root_url }}/assets/images/bluewave-entire.mp4" type="video/mp4" autoplay loop>
+</video>
                         <img src="{{ root_url }}/assets/images/bluewave-entire.mp4" alt="gif of bluewave home screen" class="img-fluid images2">
                         <p class="project-title"> {{ page.challenge-title}} </p> 
                         <p class="project-para-colon"> {{ page.the-challenge }} </p>
