--- a/_layouts/bluewave.html
+++ b/_layouts/bluewave.html
@@ -40,10 +40,7 @@ layout: bluewave
 
                 <div class="gallery-cell">
                     <div class="cell-text">
-                        <video controls autoplay loop class="img-fluid images2">
-  <source src="{{ root_url }}/assets/images/bluewave-entire.mp4" type="video/mp4">
-</video>
-                        <img src="{{ root_url }}/assets/images/bluewave-entire.mp4" alt="gif of bluewave home screen" class="img-fluid images2">
+                        <img src="{{ page.image2 }}" alt="gif of bluewave home screen" class="img-fluid images2">
                         <p class="project-title"> {{ page.challenge-title}} </p> 
                         <p class="project-para-colon"> {{ page.the-challenge }} </p>
                         <p class="project-para-dot"> {{ page.c-point1 }} </p>
