--- a/_layouts/bluewave.html
+++ b/_layouts/bluewave.html
@@ -72,7 +72,7 @@ layout: bluewave
 
                 <div class="gallery-cell">
                     <div class="cell-text">
-                        <img src="{{ root_url }}/assets/images/bluewave-warning.mp4" class="img-fluid images2">
+                        <img src="{{ root_url }}/assets/images/bluewave-warning.gif" class="img-fluid images2">
                         <p class="project-title"> {{ page.ideation-prototype-title }} </p> 
                         <p class="project-para"> {{ page.prototyping }} </p>
                     </div>
@@ -80,7 +80,7 @@ layout: bluewave
 
                 <div class="gallery-cell">
                     <div class="cell-text">
-                        <img src="{{ root_url }}/assets/images/bluewave-portal.mp4" class="img-fluid images2">
+                        <img src="{{ root_url }}/assets/images/bluewave-portal.gif" class="img-fluid images2">
                         <p class="project-title"> {{ page.interface-title }} </p> 
                         <p class="project-para-colon"> {{ page.interface }} </p>
                         <p class="project-para-dot"> {{ page.interface-point1 }} </p>
