--- a/_layouts/bluewave.html
+++ b/_layouts/bluewave.html
@@ -14,6 +14,7 @@ layout: bluewave
         <meta name="author" content="Cools Cache">
         <meta http-equiv="content-language" content="en" />
         <meta name="viewport" content="width=device-width, inital-scale=1">
+        <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.ico">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ root_url }}/assets/css/styles.css">
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
@@ -72,7 +73,7 @@ layout: bluewave
 
                 <div class="gallery-cell">
                     <div class="cell-text">
-                        <img src="{{ root_url }}/assets/images/bluewave-warning.gif" class="img-fluid images2">
+                        <img src="{{ page.image5 }}" class="img-fluid images2">
                         <p class="project-title"> {{ page.ideation-prototype-title }} </p> 
                         <p class="project-para"> {{ page.prototyping }} </p>
                     </div>
@@ -80,7 +81,7 @@ layout: bluewave
 
                 <div class="gallery-cell">
                     <div class="cell-text">
-                        <img src="{{ root_url }}/assets/images/bluewave-portal.gif" class="img-fluid images2">
+                        <img src="{{ page.image6 }}" class="img-fluid images2">
                         <p class="project-title"> {{ page.interface-title }} </p> 
                         <p class="project-para-colon"> {{ page.interface }} </p>
                         <p class="project-para-dot"> {{ page.interface-point1 }} </p>
