--- a/_layouts/teleO2.html
+++ b/_layouts/teleO2.html
@@ -13,6 +13,7 @@ layout: teleO2
         <meta name="keywords" content="UX Design, UI Design, Front-end Coding, HTML, CSS, Melbourne, Studio">
         <meta name="author" content="Cools Cache">
         <meta name="viewport" content="width=device-width, inital-scale=1">
+        <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.ico">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ root_url }}/assets/css/styles.css">
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
