--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -7,5 +7,5 @@
 </div>
 
 <div class="post-header2">
-    <a href="{{ page.the-next-one }}" class="nav-text"> the next one ➝  </a>
+    <a href="{{ page.the-next-one }}" class="nav-text"> next project ➝  </a>
 </div>
