--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <a href="https://www.linkedin.com/in/makalatrezise/">  <span class="nav-text footer-text"> linkedin </span> </a>
     <p class="footer-text"> | </p>
-    <a href="https://github.com/makalatrezise">  <span class="nav-text footer-text"> github </span> </a>
+    <a href="https://github.com/coolscache">  <span class="nav-text footer-text"> github </span> </a>
     <p class="footer-text"> | </p>
     <a href="https://www.instagram.com/coolscache/">  <span class="nav-text footer-text insta"> insta </span> </a>
     <p class="footer-text"> | </p>
