--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -2,6 +2,7 @@
     <div class="header-inner">
         <a href="{{site.url}}/portfolio.html"> <p class="nav-text logo"> cools cache | (studio) </p> </a>
         <!-- <span class="post-header-capsule"> {{ page.title }} </span> -->
+        <p class="instuctions"> swipe to view next </p>
         <p class="gallery-status"></p>
     </div>
 </div>
