--- a/_layouts/bluewave.html
+++ b/_layouts/bluewave.html
@@ -35,7 +35,8 @@ layout: bluewave
                         <img src="{{ page.image1 }}" alt="bluewave disinfection device" class="img-fluid images1">
                         <p class="project-title"> {{ page.title }} </p> 
                         <p class="project-title"> {{ page.client }} </p> 
-                        <p class="project-para"> {{ page.summary }} </p>
+                        <p class="project-para link-below"> {{ page.summary }} </p>
+                        <a href="https://bluewave.technology/" class="url"> ➝ bluewave.technology </a>
                     </div>
                 </div>
 
