--- a/_layouts/bluewave.html
+++ b/_layouts/bluewave.html
@@ -104,7 +104,7 @@ layout: bluewave
 
     <!-- initalise flickity -->
     <script type="text/javascript">
-        var elem = document.querySelector('.main-carousel');
+        var elem = document.querySelector('.gallery-cell');
         var flkty = new Flickity( elem, {
          // options
         cellAlign: 'left',
@@ -113,7 +113,7 @@ layout: bluewave
 
         // element argument can be a selector string
         //   for an individual element
-        var flkty = new Flickity( '.main-carousel', {
+        var flkty = new Flickity( '.gallery-cell', {
         // options
     });
 
